[REV] Optimize plugin system
