# pkg/api/controller/resources.go
@@ -39,8 +39,9 @@ import (
 	"github.com/goodrain/rainbond/pkg/api/handler"
 	httputil "github.com/goodrain/rainbond/pkg/util/http"
 
-	"github.com/Sirupsen/logrus"
 	"sort"
+
+	"github.com/Sirupsen/logrus"
 	"github.com/renstorm/fuzzysearch/fuzzy"
 )
 
@@ -134,8 +135,6 @@ func (t *TenantStruct) TenantResources(w http.ResponseWriter, r *http.Request) {
 	return
 }
 
-
-
 //TenantsQuery TenantsQuery
 func (t *TenantStruct) TenantsQuery(w http.ResponseWriter, r *http.Request) {
 	// swagger:operation GET /v2/tenants/query/{tenant_name} v2 tenants
@@ -163,9 +162,7 @@ func (t *TenantStruct) TenantsQuery(w http.ResponseWriter, r *http.Request) {
 	//       "$ref": "#/responses/commandResponse"
 	//     description: 统一返回格式
 
-
 	tenantName := strings.TrimSpace(chi.URLParam(r, "tenant_name"))
-
 
 	rep, err := handler.GetTenantManager().GetTenantsName()
 	if err != nil {
@@ -173,11 +170,10 @@ func (t *TenantStruct) TenantsQuery(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	result:=fuzzy.Find(tenantName, rep) // [cartwheel wheel]
+	result := fuzzy.Find(tenantName, rep) // [cartwheel wheel]
 	httputil.ReturnSuccess(r, w, result)
 	return
 }
-
 
 //TenantsGetByName TenantsGetByName
 func (t *TenantStruct) TenantsGetByName(w http.ResponseWriter, r *http.Request) {
@@ -206,9 +202,6 @@ func (t *TenantStruct) TenantsGetByName(w http.ResponseWriter, r *http.Request) 
 	//       "$ref": "#/responses/commandResponse"
 	//     description: 统一返回格式
 
-
-
-
 	tenantName := strings.TrimSpace(chi.URLParam(r, "tenant_name"))
 
 	v, err := handler.GetTenantManager().GetTenantsByName(tenantName)
@@ -216,23 +209,23 @@ func (t *TenantStruct) TenantsGetByName(w http.ResponseWriter, r *http.Request) 
 		httputil.ReturnError(r, w, 500, fmt.Sprintf("get tenants names error, %v", err))
 		return
 	}
-	logrus.Infof("query tenant from db by name %s ,got %v",tenantName,v)
-	var res =&api_model.TenantResource{}
+	logrus.Infof("query tenant from db by name %s ,got %v", tenantName, v)
+	var res = &api_model.TenantResource{}
 	services, err := handler.GetServiceManager().GetService(v.UUID)
 	if err != nil {
-		httputil.ReturnError(r, w, 500, fmt.Sprintf("get services by tenantID %s error, %v",v.UUID, err))
+		httputil.ReturnError(r, w, 500, fmt.Sprintf("get services by tenantID %s error, %v", v.UUID, err))
 		return
 	}
 	totalResInfo, _ := handler.GetTenantManager().TotalMemCPU(services)
 	usedResInfo, _ := handler.GetTenantManager().StatsMemCPU(services)
 
-	res.UUID=v.UUID
-	res.Name=v.Name
-	res.EID=v.EID
-	res.AllocatedCPU=totalResInfo.CPU
-	res.AllocatedMEM=totalResInfo.MEM
-	res.UsedCPU=usedResInfo.CPU
-	res.UsedMEM=usedResInfo.MEM
+	res.UUID = v.UUID
+	res.Name = v.Name
+	res.EID = v.EID
+	res.AllocatedCPU = totalResInfo.CPU
+	res.AllocatedMEM = totalResInfo.MEM
+	res.UsedCPU = usedResInfo.CPU
+	res.UsedMEM = usedResInfo.MEM
 
 	httputil.ReturnSuccess(r, w, res)
 	return
@@ -271,19 +264,15 @@ func (t *TenantStruct) TenantsWithResource(w http.ResponseWriter, r *http.Reques
 	//       "$ref": "#/responses/commandResponse"
 	//     description: 统一返回格式
 
-
-
 	pageLenStr := strings.TrimSpace(chi.URLParam(r, "pageLen"))
 	curPageStr := strings.TrimSpace(chi.URLParam(r, "curPage"))
 
-
-
-	pageLen,err:=strconv.Atoi(pageLenStr)
+	pageLen, err := strconv.Atoi(pageLenStr)
 	if err != nil {
 		httputil.ReturnError(r, w, 400, fmt.Sprintf("bad request, %v", err))
 		return
 	}
-	curPage,err:=strconv.Atoi(curPageStr)
+	curPage, err := strconv.Atoi(curPageStr)
 	if err != nil {
 		httputil.ReturnError(r, w, 400, fmt.Sprintf("bad request, %v", err))
 		return
@@ -294,40 +283,39 @@ func (t *TenantStruct) TenantsWithResource(w http.ResponseWriter, r *http.Reques
 		return
 	}
 	var result []*api_model.TenantResource
-	for _,v:=range rep{
+	for _, v := range rep {
 		services, err := handler.GetServiceManager().GetService(v.UUID)
 		if err != nil {
-			httputil.ReturnError(r, w, 500, fmt.Sprintf("get services by tenantID %s error, %v",v.UUID, err))
+			httputil.ReturnError(r, w, 500, fmt.Sprintf("get services by tenantID %s error, %v", v.UUID, err))
 			return
 		}
 		totalResInfo, _ := handler.GetTenantManager().TotalMemCPU(services)
 		usedResInfo, _ := handler.GetTenantManager().StatsMemCPU(services)
 		var res api_model.TenantResource
-		res.UUID=v.UUID
-		res.Name=v.Name
-		res.EID=v.EID
-		res.AllocatedCPU=totalResInfo.CPU
-		res.AllocatedMEM=totalResInfo.MEM
-		res.UsedCPU=usedResInfo.CPU
-		res.UsedMEM=usedResInfo.MEM
-		result=append(result,&res)
+		res.UUID = v.UUID
+		res.Name = v.Name
+		res.EID = v.EID
+		res.AllocatedCPU = totalResInfo.CPU
+		res.AllocatedMEM = totalResInfo.MEM
+		res.UsedCPU = usedResInfo.CPU
+		res.UsedMEM = usedResInfo.MEM
+		result = append(result, &res)
 	}
 	pList := api_model.TenantResList(result)
 	sort.Sort(pList)
 	var resultList []*api_model.TenantResource
-	if curPage*pageLen<len(rep) {
-		resultList=pList[(curPage-1)*pageLen:curPage*pageLen]
-	}else{
-		resultList=pList[(curPage-1)*pageLen:len(rep)]
+	if curPage*pageLen < len(rep) {
+		resultList = pList[(curPage-1)*pageLen : curPage*pageLen]
+	} else {
+		resultList = pList[(curPage-1)*pageLen : len(rep)]
 	}
 
 	var ret api_model.PagedTenantResList
-	ret.List=resultList
-	ret.Length=len(resultList)
+	ret.List = resultList
+	ret.Length = len(resultList)
 	httputil.ReturnSuccess(r, w, ret)
 	return
 }
-
 
 //SumTenants 统计租户数量
 func (t *TenantStruct) SumTenants(w http.ResponseWriter, r *http.Request) {
